<resources>
    <string name="app_name">TodoApp</string>
    <string name="ellipse">ellipse</string>
    <string name="photo">photo</string>
    <string name="history">history</string>
    <string name="exit">exit</string>
    <string name="welcome">Welcome Back!</string>
    <string name="email">Enter your email</string>
    <string name="password">Confirm password</string>
    <string name="forgot">Forgot Password</string>
    <string name="sign">Sign In</string>
    <string name="have_an">Do not have an account?</string>
    <string name="signup">SignUp</string>
    <string name="undraw_sign">undraw_sign</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="we_help">We help you meet up you tasks on time.</string>
    <string name="already_have">Already have an account?</string>
    <string name="full_name">Enter your full name</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm">Confirm password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_history">No history</string>
    <string name="task_list">Task List</string>
    <string name="lets_get">Let’s get things done on time</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tellus praesent purus tincidunt ut cursus vitae. Nisl, vitae nulla lectus tortor, est a aliquam. Pretium netus</string>
    <string name="indicators">indicators</string>
    <string name="images_splash">images splash one</string>
    <string name="welcome_profile">Welcome %s!</string>
    <string name="profile_email">email</string>
</resources>