<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.History.HistoryFragment">


    <ImageView
        android:id="@+id/imageEllipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse"
        android:contentDescription="@string/ellipse"/>

    <ImageView
        android:id="@+id/imageBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/history"
        android:contentDescription="@string/history"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="420dp"
        android:text="@string/no_history"
        android:fontFamily="@font/bold"
        android:textSize="32sp"/>
</FrameLayout>