<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashTwoFragment"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageEllipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ellipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse" />

        <ImageView
            android:id="@+id/imagesSplashOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:contentDescription="@string/images_splash"
            app:srcCompat="@drawable/images_splash_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageEllipse" />

        <TextView
            android:id="@+id/textViewOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/lets_get"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagesSplashOne" />

        <ImageView
            android:id="@+id/imageIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/indicators"
            app:srcCompat="@drawable/indicators_two"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOne"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/bold"
            android:textColorHint="@color/black"
            android:hint="@string/sign"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            android:elevation="4dp"
            android:paddingHorizontal="100dp"
            android:paddingVertical="12dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageIndicator">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/bold"
            android:textColorHint="@color/black"
            android:hint="@string/register"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            android:elevation="4dp"
            android:paddingHorizontal="100dp"
            android:paddingVertical="12dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_button">
        </com.google.android.material.button.MaterialButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>